--- a/app/src/style.css
+++ b/app/src/style.css
@@ -44,7 +44,7 @@ nav {
 ==============================*/
 .card {
   margin-bottom: 30px;
-  width: 200px;
+  /* width: 200px; */
 }
 .card__cover {
   position: relative;
