--- a/app/src/style.css
+++ b/app/src/style.css
@@ -7,38 +7,198 @@
 
 body {
   margin: 0;
-  font-family: "Luckiest Guy", cursive;
-}
-
-.nav--icon {
-  width: 100px;
-  margin-right: auto;
-}
-
-.nav--item {
-  margin-right: auto;
-  color: #ffffff;
   font-family: "Anton", sans-serif;
-  font-size: 20px;
 }
 
-nav {
-  height: 70px;
-  display: flex;
-  align-items: center;
-  /* background-color: rgba(13, 13, 15, 0.75); */
-  padding: 40px 25px;
+a {
+  outline: none;
+  text-decoration: none;
+}
+
+.main--body {
+  padding: 57px 47px;
+}
+
+.main--div {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #ff5860;
+  text-align: center;
+  text-justify: inter-word;
+}
+
+/*==============================
+	Header
+==============================*/
+.header {
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 101;
+  background-color: #ffffff;
   box-shadow: 0 3px 8px rgba(0, 0, 0, 0.1);
 }
-
-.main--body {
-  padding: 57px 47px;
+.header__logo {
+  width: 100px;
+  margin-right: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.main--body {
-  padding: 57px 47px;
+.header__nav {
+  display: flex;
+  padding: 40px 25px;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  position: fixed;
+  top: 70px;
+  right: 0;
+  bottom: 0;
+  z-index: 99;
+  width: 260px;
+  padding: 30px 30px 0;
+  -webkit-transform: translate3d(260px, 0, 0);
+  -moz-transform: translate3d(260px, 0, 0);
+  transform: translate3d(260px, 0, 0);
+  -webkit-transition: 0.4s ease;
+  -moz-transition: 0.4s ease;
+  transition: 0.4s ease;
+}
+.header__nav:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 2px;
+  display: block;
+  background-image: -moz-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+  background-image: -webkit-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+  background-image: -ms-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+  background-image: linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+  -webkit-box-shadow: 0 0 20px 0 rgba(255, 88, 96, 0.5);
+  box-shadow: 0 0 20px 0 rgba(255, 88, 96, 0.5);
+}
+.header__nav--active {
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+.header__nav-link {
+  margin-right: auto;
+  color: #000000;
+  font-family: "Anton", sans-serif;
+  font-size: 20px;
+  font-weight: 300;
+  letter-spacing: 0.2px;
 }
 
+.header__nav-link:hover {
+  color: #ff55a5;
+}
+
+.header__nav-item {
+  display: block;
+  margin-bottom: 20px;
+  position: relative;
+  margin-right: auto;
+  color: #000000;
+  font-family: "Anton", sans-serif;
+  font-size: 20px;
+  font-weight: 300;
+  letter-spacing: 0.2px;
+}
+.header__content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 70px;
+  position: relative;
+}
+@media (min-width: 768px) {
+  .header__content {
+    height: 90px;
+  }
+  .header__logo {
+    height: 90px;
+    width: 240px;
+    padding: 0;
+  }
+  .header__logo img {
+    max-width: 172px;
+  }
+  .header__nav {
+    top: 90px;
+  }
+}
+@media (min-width: 1200px) {
+  .header__nav {
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    padding: 0;
+    background-color: transparent;
+    width: auto;
+    flex-direction: row;
+    align-items: center;
+    position: relative;
+    top: auto;
+    right: auto;
+    bottom: auto;
+    margin-left: 45px;
+  }
+  .header__nav:before {
+    display: none;
+  }
+  .header__nav-item {
+    margin: 0 45px 0 0;
+    width: auto;
+  }
+  .header__nav-item:last-child {
+    margin: 0;
+  }
+  .header__nav-link {
+    line-height: 90px;
+    display: block;
+  }
+  .header__nav-link--active {
+    color: #fff;
+    cursor: default;
+    position: relative;
+  }
+  .header__nav-link--active:hover {
+    color: #fff;
+  }
+  .header__nav-link--active:before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 2px;
+    display: block;
+    background-image: -moz-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+    background-image: -webkit-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+    background-image: -ms-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+    background-image: linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+    -webkit-box-shadow: 0 0 20px 0 rgba(255, 88, 96, 0.5);
+    box-shadow: 0 0 20px 0 rgba(255, 88, 96, 0.5);
+  }
+  .header__content {
+    justify-content: flex-start;
+  }
+}
+.header__wrap {
+  position: relative;
+  z-index: 2;
+}
 /*==============================
 	Card
 ==============================*/
@@ -399,6 +559,154 @@ nav {
 }
 
 /*==============================
+	Section
+==============================*/
+.section {
+  padding: 40px 0;
+  position: relative;
+}
+.section__title {
+  color: #fff;
+  font-weight: 300;
+  font-size: 28px;
+  margin-bottom: 25px;
+}
+.section__title b {
+  font-weight: 700;
+}
+.section__title--center {
+  text-align: center;
+}
+.section__title--no-margin {
+  margin-bottom: 10px;
+}
+.section__text {
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 16px;
+  line-height: 26px;
+  margin-bottom: 25px;
+  font-family: "Open Sans", sans-serif;
+  letter-spacing: 0.2px;
+}
+.section__text:last-child {
+  margin-bottom: 0;
+}
+.section__text--last-with-margin:last-child {
+  margin-bottom: 30px;
+}
+.section__text b {
+  font-weight: 600;
+}
+.section__text a {
+  color: #ff55a5;
+}
+.section__text a:hover {
+  color: #ff55a5;
+  text-decoration: underline;
+}
+.section__btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  width: 160px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  background-image: -moz-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+  background-image: -webkit-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+  background-image: -ms-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+  background-image: linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+  -webkit-box-shadow: 0 0 20px 0 rgba(255, 88, 96, 0.5);
+  box-shadow: 0 0 20px 0 rgba(255, 88, 96, 0.5);
+  opacity: 0.85;
+  font-size: 13px;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 500;
+  letter-spacing: 1px;
+  margin: 10px auto 15px;
+  position: relative;
+}
+.section__btn:hover {
+  opacity: 1;
+  color: #fff;
+}
+.section__wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+.section--dark {
+  background-color: #28282d;
+}
+.section--first {
+  margin-top: 70px;
+}
+.section--first .section__title {
+  margin-bottom: 0;
+}
+.section--first:before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 2px;
+  display: block;
+  background-image: -moz-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+  background-image: -webkit-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+  background-image: -ms-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+  background-image: linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+  -webkit-box-shadow: 0 0 20px 0 rgba(255, 88, 96, 0.5);
+  box-shadow: 0 0 20px 0 rgba(255, 88, 96, 0.5);
+}
+@media (min-width: 576px) {
+  .section__title {
+    font-size: 30px;
+  }
+}
+@media (min-width: 768px) {
+  .section {
+    padding: 60px 0;
+  }
+  .section__title {
+    font-size: 32px;
+    margin-bottom: 35px;
+  }
+  .section__title--no-margin {
+    margin-bottom: 20px;
+  }
+  .section__wrap {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .section__btn {
+    margin: 20px auto 15px;
+  }
+  .section--first {
+    margin-top: 90px;
+  }
+}
+@media (min-width: 992px) {
+  .section__text--last-with-margin:last-child {
+    margin-bottom: 30px;
+  }
+  .section__title--no-margin {
+    margin-bottom: 15px;
+  }
+}
+@media (min-width: 1200px) {
+  .section__title {
+    font-size: 36px;
+  }
+  .section__title--sidebar {
+    font-size: 32px;
+  }
+}
+
+/*==============================
 	Home
 ==============================*/
 .home {
@@ -424,7 +732,7 @@ nav {
   opacity: 0.07;
 }
 .home__title {
-  color: #fff;
+  color: #000000;
   text-transform: uppercase;
   font-weight: 300;
   font-size: 28px;
@@ -500,5 +808,171 @@ nav {
   }
   .home__title {
     font-size: 36px;
+  }
+}
+
+/*==============================
+	Footer
+==============================*/
+.footer {
+  display: block;
+  position: relative;
+  overflow: hidden;
+  padding: 40px 0 30px;
+  -webkit-box-shadow: 0 5px 25px 0 rgba(0, 0, 0, 0.3);
+  box-shadow: 0 5px 25px 0 rgba(0, 0, 0, 0.3);
+}
+.footer:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 2px;
+  display: block;
+  background-image: -moz-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+  background-image: -webkit-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+  background-image: -ms-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+  background-image: linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+  -webkit-box-shadow: 0 0 20px 0 rgba(255, 88, 96, 0.5);
+  box-shadow: 0 0 20px 0 rgba(255, 88, 96, 0.5);
+}
+.footer__title {
+  color: #000000;
+  font-family: "Anton", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 0.4px;
+  margin-bottom: 10px;
+  margin-top: 15px;
+}
+.footer__list {
+  margin-bottom: 15px;
+  list-style: none;
+  display: block;
+}
+.footer__list li {
+  margin-bottom: 10px;
+  font-family: "Anton", sans-serif;
+}
+.footer__list li:last-child {
+  margin-bottom: 0;
+}
+.footer__list a {
+  font-size: 14px;
+  color: #000000;
+}
+.footer__list a:hover {
+  color: #ff55a5;
+}
+
+.footer__social {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 15px;
+}
+.footer__social li {
+  margin-right: 20px;
+}
+.footer__social li:last-child {
+  margin-left: 0;
+}
+.footer__social li.facebook a {
+  color: #3b5999;
+}
+.footer__social li.instagram a {
+  color: #ff5860;
+}
+.footer__social li.instagram a i:before {
+  background: radial-gradient(
+    circle at 30% 107%,
+    #fdf497 0%,
+    #fdf497 5%,
+    #fd5949 45%,
+    #d6249f 60%,
+    #285aeb 90%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: #ff5860;
+}
+.footer__social li.twitter a {
+  color: #1da1f2;
+}
+.footer__social li.vk a {
+  color: #45668e;
+}
+.footer__social a {
+  font-size: 24px;
+  color: rgba(255, 255, 255, 0.5);
+}
+.footer__social a:hover {
+  color: #ff55a5;
+}
+.footer__copyright {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 15px;
+  border-top: 1px solid rgba(255, 255, 255, 0.05);
+  padding-top: 30px;
+  font-family: "Open Sans", sans-serif;
+}
+.footer__copyright small {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 14px;
+}
+.footer__copyright small a {
+  color: rgba(255, 255, 255, 0.5);
+}
+.footer__copyright small a:hover {
+  text-decoration: none;
+}
+.footer__copyright ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 10px;
+}
+.footer__copyright ul li {
+  margin-right: 20px;
+}
+.footer__copyright ul li:last-child {
+  margin-right: 0;
+}
+.footer__copyright ul a {
+  color: #000000;
+  font-size: 14px;
+}
+.footer__copyright ul a:hover {
+  color: #ff55a5;
+}
+@media (min-width: 768px) {
+  .footer {
+    padding: 60px 0 30px;
+  }
+  .footer__copyright {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 60px;
+  }
+  .footer__copyright ul {
+    margin-top: 0;
+  }
+  .footer__list a {
+    font-size: 15px;
+  }
+  .footer__title {
+    margin-bottom: 15px;
+  }
+}
+@media (min-width: 992px) {
+  .footer__copyright ul li {
+    margin-right: 30px;
   }
 }
