added routers to the page created a gallery page and made it work to display the movies like in the Java project need to fix something with the way the movies are displayed on the gallery page because it looks like info is being cut off created a moviecard details file and moviegallerycards page as well made a new Home file to handle the home page took care of genres in MoiveCard added link to hyperlink the headers to the right pages

--- a/app/src/css/style.css
+++ b/app/src/css/style.css
@@ -998,3 +998,14 @@ a {
     margin-right: 30px;
   }
 }
+/*==============================
+	Catalog
+==============================*/
+.catalog {
+  padding: 0 0 20px;
+}
+@media (min-width: 768px) {
+  .catalog {
+    padding: 0 0 45px;
+  }
+}
